--- a/application.json
+++ b/application.json
@@ -10,6 +10,10 @@
   "pages": [
     {
       "id": "Page1",
+      "isDefault": false
+    },
+    {
+      "id": "Movies",
       "isDefault": true
     }
   ],
